# CMPE275_FinalProject

./: CMakeLists.txt  README.md  analytics.cpp  analytics_1.cpp  analytics_2.cpp  analytics_3.cpp  config.env  ingestion.cpp  main.cpp  metadataAnalytics.cpp  metadataAnalytics.h  register.h  replica_analytics.cpp  test.csv
